--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+    /* Adjust based on your navbar height */
+}
